--- a/ansible_playbook/install_image.yml
+++ b/ansible_playbook/install_image.yml
@@ -11,5 +11,6 @@
         name: httpd
         state: present
     - name: start the service
+      service:
         name: httpd
         state: started
