--- a/ansible-playbook2/pingtest.yml
+++ b/ansible-playbook2/pingtest.yml
@@ -1,1 +1,10 @@
-
+---
+- name: pacakge management
+  hosts: dev
+  user: ansible
+  become: yes
+  connection: ssh
+  gather_facts: no
+  tasks:
+    - name: Ping the host
+      ping:
